--- a/index.html
+++ b/index.html
@@ -32,23 +32,46 @@
             <div class="col-md 8">
                 <div class="row-md 8"><h1>About Me</h1></div>
                 <div class="row-md 8">
-               <img class="profile-img" src="assets/images/cat.jpg" class="img-responsive">
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac 
-                    rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin 
-                    vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo 
-                    purus vitae sollicitudin consectetur.</p>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <img class="profile-img" src="assets/images/cat.jpg" class="img-responsive">
+                            <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac 
+                                    rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin 
+                                    vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. 
+                                    </p>
+                        </div>
 
-                    <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. 
-                    Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
-
-                    <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh 
-                    tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac 
+                        <div class="col-md-4"> 
+                            <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac 
                             rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin 
                             vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo 
-                            purus vitae sollicitudin consectetur.</p>
+                            purus vitae sollicitudin consectetur.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac 
+                            rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin 
+                            vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo 
+                            purus vitae sollicitudin consectetur.
+                            </p>
+                        </div>
+
+                        <div class="col-md-4"> 
+                                <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac 
+                                rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin 
+                                vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo 
+                                purus vitae sollicitudin consectetur.
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac 
+                                rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin 
+                                vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo 
+                                purus vitae sollicitudin consectetur.
+                                </p>
+                            </div>
+                    </div>
+                    
+
+
                 </div>
                 </div>
             </div>
@@ -62,10 +85,9 @@
 </body>
 <style>
     .profile-img{
-        float: left;
+        padding-bottom: 10px;
         padding-top: 10px;
-        padding-right: 25px;
-        height: 200px;
+        width: 100%;
     }
 
     h1 {
@@ -79,7 +101,7 @@
 
     body{
         background: url("assets/images/concrete_seamless.png");
-       
+        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     }
 
     #main-container{
