--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 <body>
     
@@ -84,64 +85,6 @@
         </div>
 </body>
 <style>
-    .profile-img{
-        padding-bottom: 10px;
-        padding-top: 10px;
-        width: 100%;
-    }
-
-    h1 {
-    padding-bottom: 20px;
-    font-size: 30px;
-    line-height: 49px;
-    border-bottom: 3px solid #dddddd;
-    color: #4aaaa5;
-    font-family: Georgia, 'Times New Roman', Times, serif3
-    }
-
-    body{
-        background: url("assets/images/concrete_seamless.png");
-        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    }
-
-    #main-container{
-        background-color: #ffffff;
-        padding: 20px;
-        line-height: 2;
-        border: 1px solid #dddddd;
-        margin-bottom: 50px;
-
-    }
-
-    footer{
-        text-align: center;
-        background-color: #ffffff;
-        position: relative;
-        bottom: 0;
-        background-color: #666666;
-        border-top:8px solid #4aaaa5;
-        height: 50px;
-        color: #cccccc;
-    }
-
-    /*li.nav-item{
-        box-sizing: border-box;
-        margin: 10px;
-    }*/
-
-    .navbar{
-        margin-bottom: 30px;
-        border-bottom: 2px solid #cccccc;
-    }
-
-    .navbar-light .navbar-brand{
-        background-color: #4aaaa5;
-        padding: 20px;
-        font-family: Georgia, Times, "Times New Roman", serif;
-        font-weight: 700;
-        color: #ffffff;
-        font-size: 20px;
-    }
-
+    
 </style>
 </html>
